--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <title>Luis Cari | Ciberseguridad & IT</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 40px; background-color: #f4f4f4; }
-    header, section, footer { background: white; padding: 20px; margin-bottom: 20px; border-radius: 8px; }
+    header, section, footer { background: white; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
     h1, h2 { color: #2c3e50; }
-    a.button { background: #3498db; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px; }
+    a.button { background: #3498db; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px; display: inline-block; margin-top: 10px; }
+    ul { padding-left: 20px; }
   </style>
 </head>
 <body>
@@ -41,7 +42,7 @@
     <h2>Contacto</h2>
     <p>Email: luis@email.com</p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/luis-cari-496855329/" target="_blank">Ver perfil</a></p>
-    <p>GitHub: <a href="https://github.com/" target="_blank">github.com/luiscari</a></p>
+    <p>GitHub: <a href="https://github.com/Luis-Cari" target="_blank">github.com/Luis-Cari</a></p>
   </section>
 
   <footer>
