--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Luis Cari | Ciberseguridad & IT</title>
+  <title>Luis Cari | Ciberseguridad & Telecomunicaciones</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 40px; background-color: #f4f4f4; }
     header, section, footer { background: white; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
@@ -15,12 +15,12 @@
 
   <header>
     <h1>Luis Cari</h1>
-    <p>Emprendedor técnico | Ciberseguridad | Fundador de ReparaYA</p>
+    <p>Licenciado en Tecnologías Digitales | Técnico Superior en Telecomunicaciones | Fundador de ReparaYA</p>
   </header>
 
   <section>
     <h2>Sobre mí</h2>
-    <p>Soy técnico en IT en transición hacia ciberseguridad profesional. Me especializo en análisis de tráfico, administración de sistemas Linux y automatización de procesos. Busco oportunidades remotas en soporte técnico y seguridad digital.</p>
+    <p>Soy profesional técnico con formación universitaria en tecnologías digitales y telecomunicaciones. Me especializo en ciberseguridad, análisis de tráfico de red, administración de sistemas Linux y automatización de procesos. Actualmente desarrollo laboratorios prácticos con Kali Linux y busco oportunidades remotas en soporte técnico y seguridad digital.</p>
   </section>
 
   <section>
@@ -34,13 +34,13 @@
       <li>🔍 Análisis de tráfico con Wireshark y Suricata</li>
       <li>🛠️ Automatización de cálculos financieros en Excel</li>
       <li>💻 Desarrollo web para ReparaYA (en progreso)</li>
-      <li>🧪 Laboratorios con Kali Linux: escaneo, scripting y documentación</li>
+      <li>🧪 Laboratorios con Kali Linux: escaneo de red, fuerza bruta y scripting</li>
     </ul>
   </section>
 
   <section>
     <h2>Contacto</h2>
-    <p>Email: luis@email.com</p>
+    <p>Email: <a href="mailto:mail1685@ifts24.edu.ar">mail1685@ifts24.edu.ar</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/luis-cari-496855329/" target="_blank">Ver perfil</a></p>
     <p>GitHub: <a href="https://github.com/Luis-Cari" target="_blank">github.com/Luis-Cari</a></p>
   </section>
