--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <section>
     <h2>Sobre mí</h2>
-    <p>Soy profesional técnico con formación universitaria en tecnologías digitales y telecomunicaciones. Me especializo en ciberseguridad, análisis de tráfico de red, administración de sistemas Linux y automatización de procesos. Actualmente desarrollo laboratorios prácticos con Kali Linux y busco oportunidades remotas en soporte técnico y seguridad digital.</p>
+    <p>Soy profesional técnico con formación universitaria en tecnologías digitales y telecomunicaciones. Me especializo en ciberseguridad, análisis de tráfico de red, administración de sistemas Linux y automatización de procesos. Actualmente desarrollo laboratorios prácticos con Kali Linux, incluyendo escaneo de red, fuerza bruta y scripting Bash.</p>
   </section>
 
   <section>
@@ -34,13 +34,13 @@
       <li>🔍 Análisis de tráfico con Wireshark y Suricata</li>
       <li>🛠️ Automatización de cálculos financieros en Excel</li>
       <li>💻 Desarrollo web para ReparaYA (en progreso)</li>
-      <li>🧪 Laboratorios con Kali Linux: escaneo de red, fuerza bruta y scripting</li>
+      <li>🧪 Laboratorios con Kali Linux: escaneo, fuerza bruta y scripting</li>
     </ul>
   </section>
 
   <section>
     <h2>Contacto</h2>
-    <p>Email: <a href="mailto:mail1685@ifts24.edu.ar">mail1685@ifts24.edu.ar</a></p>
+    <p>Email institucional: <a href="mailto:mail1685@ifts24.edu.ar">mail1685@ifts24.edu.ar</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/luis-cari-496855329/" target="_blank">Ver perfil</a></p>
     <p>GitHub: <a href="https://github.com/Luis-Cari" target="_blank">github.com/Luis-Cari</a></p>
   </section>
@@ -51,3 +51,4 @@
 
 </body>
 </html>
+
