--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <section>
     <h2>Contacto</h2>
-    <p>Email institucional: <a href="mailto:mail1685@ifts24.edu.ar">1685@ifts24.edu.ar</a></p>
+    <p>Email institucional: <a href="mailto:1685@ifts24.edu.ar">1685@ifts24.edu.ar</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/luis-cari-496855329/" target="_blank">Ver perfil</a></p>
     <p>GitHub: <a href="https://github.com/Luis-Cari" target="_blank">github.com/Luis-Cari</a></p>
   </section>
@@ -51,5 +51,6 @@
 
 </body>
 </html>
+
 
 
